--- a/index.html
+++ b/index.html
@@ -15,54 +15,96 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="images/logo.jpg" alt="Logo" />
-        The Real Concept
-      </a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
   <!-- Hero Carousel Section -->
   <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/hero.jpg" class="d-block w-100" alt="Hero 1" />
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="display-4">We Care For Your Dreams...</h1>
-          <p class="lead">Stylish Interiors | Affordable Luxury | Customized Solutions</p>
+          <!-- Navbar overlay on hero -->
+          <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+              <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
+              The Real Concept
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
+
+          <h1 class="display-4 mt-auto mb-3">We Care For Your Dreams...</h1>
+          <p class="lead mb-5">Stylish Interiors | Affordable Luxury | Customized Solutions</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="images/hero1.jpg" class="d-block w-100" alt="Hero 2" />
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="display-4">Design that Defines You</h1>
-          <p class="lead">From Concept to Creation</p>
+          <!-- Navbar overlay on hero -->
+          <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+              <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
+              The Real Concept
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
+
+          <h1 class="display-4 mt-auto mb-3">Design that Defines You</h1>
+          <p class="lead mb-5">From Concept to Creation</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="images/hero2.jpg" class="d-block w-100" alt="Hero 3" />
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="display-4">Spaces Reimagined</h1>
-          <p class="lead">Elegant. Functional. Yours.</p>
+          <!-- Navbar overlay on hero -->
+          <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+              <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
+              The Real Concept
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
+
+          <h1 class="display-4 mt-auto mb-3">Spaces Reimagined</h1>
+          <p class="lead mb-5">Elegant. Functional. Yours.</p>
         </div>
       </div>
     </div>
+
+    <!-- Carousel controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" id="prevBtn" aria-label="Previous">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" id="nextBtn" aria-label="Next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
   </div>
 
   <!-- About Section -->
@@ -137,5 +179,7 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Hero JS -->
+  <script src="scripts/hero.js"></script>
 </body>
 </html>
