--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Single Fixed Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark hero-navbar fixed-top px-4">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
+      The Real Concept
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <!-- Hero Carousel Section -->
   <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/hero.jpg" class="d-block w-100" alt="Hero 1" />
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <!-- Navbar overlay on hero -->
-          <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-              <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
-              The Real Concept
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-              </ul>
-            </div>
-          </nav>
-
           <h1 class="display-4 mt-auto mb-3">We Care For Your Dreams...</h1>
           <p class="lead mb-5">Stylish Interiors | Affordable Luxury | Customized Solutions</p>
         </div>
@@ -47,25 +47,6 @@
       <div class="carousel-item">
         <img src="images/hero1.jpg" class="d-block w-100" alt="Hero 2" />
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <!-- Navbar overlay on hero -->
-          <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-              <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
-              The Real Concept
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-              </ul>
-            </div>
-          </nav>
-
           <h1 class="display-4 mt-auto mb-3">Design that Defines You</h1>
           <p class="lead mb-5">From Concept to Creation</p>
         </div>
@@ -73,25 +54,6 @@
       <div class="carousel-item">
         <img src="images/hero2.jpg" class="d-block w-100" alt="Hero 3" />
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <!-- Navbar overlay on hero -->
-          <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-              <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
-              The Real Concept
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-              </ul>
-            </div>
-          </nav>
-
           <h1 class="display-4 mt-auto mb-3">Spaces Reimagined</h1>
           <p class="lead mb-5">Elegant. Functional. Yours.</p>
         </div>
@@ -110,17 +72,14 @@
   <!-- About Section -->
   <section id="about" class="container mt-5">
     <h2>About Us</h2>
-
     <div class="about-subsection">
       <h3>Mission</h3>
       <p>To create inspiring, elegant, and functional spaces tailored perfectly for our clients.</p>
     </div>
-
     <div class="about-subsection">
       <h3>Vision</h3>
       <p>To be the leading interior design firm known for innovation, quality, and client satisfaction.</p>
     </div>
-
     <div class="about-subsection">
       <h3>Our Values</h3>
       <p>Integrity, Creativity, Excellence, and Customer-Centric Approach.</p>
@@ -131,7 +90,6 @@
   <section id="projects" class="container mt-5">
     <h2>Projects</h2>
     <div id="projects-container">
-      <!-- Example project -->
       <div class="project">
         <h4>Living Room Makeover</h4>
         <img src="images/projects/living-room.jpg" alt="Living Room" />
