--- a/index.html
+++ b/index.html
@@ -139,6 +139,40 @@
     </div>
   </section>
 
+  <!-- Clients logos -->
+  <section id="clients" class="container mt-5">
+    <h2 class="text-center mb-4">Our Clients</h2>
+    <div id="clientsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+      <div class="carousel-inner text-center">
+        <div class="carousel-item active">
+          <img src="images/clients/client1.png" class="client-logo" alt="Client 1" />
+        </div>
+        <div class="carousel-item">
+          <img src="images/clients/client2.png" class="client-logo" alt="Client 2" />
+        </div>
+        <div class="carousel-item">
+          <img src="images/clients/client3.png" class="client-logo" alt="Client 3" />
+        </div>
+        <div class="carousel-item">
+          <img src="images/clients/client4.png" class="client-logo" alt="Client 4" />
+        </div>
+        <div class="carousel-item">
+          <img src="images/clients/client5.png" class="client-logo" alt="Client 5" />
+        </div>
+        <div class="carousel-item">
+          <img src="images/clients/client6.png" class="client-logo" alt="Client 6" />
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#clientsCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#clientsCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+  </section>
+
+
   <!-- Contact Section -->
   <section id="contact" class="container mt-5">
     <h2>Contact Us</h2>
