--- a/index.html
+++ b/index.html
@@ -145,22 +145,22 @@
     <div id="clientsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
-          <img src="images/clients/client1.png" class="client-logo" alt="Client1" />
+          <img src="images/clients/Client1.png" class="client-logo" alt="KUNDAN SPACES" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/client2.png" class="client-logo" alt="Client 2" />
+          <img src="images/clients/Client2.png" class="client-logo" alt="Client 2" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/client3.png" class="client-logo" alt="Client 3" />
+          <img src="images/clients/Client3.png" class="client-logo" alt="Client 3" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/client4.png" class="client-logo" alt="Client 4" />
+          <img src="images/clients/Client4.png" class="client-logo" alt="Client 4" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/client5.png" class="client-logo" alt="Client 5" />
+          <img src="images/clients/Client5.png" class="client-logo" alt="Client 5" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/client6.png" class="client-logo" alt="Client 6" />
+          <img src="images/clients/Client6.png" class="client-logo" alt="Client 6" />
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#clientsCarousel" data-bs-slide="prev">
