--- a/index.html
+++ b/index.html
@@ -145,32 +145,51 @@
     <div id="clientsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
-          <img src="images/clients/Client1.jpg" class="client-logo" alt="KUNDAN SPACES" />
-        </div>
-        <div class="carousel-item">
+          <div class="client-logo-wrapper">
+            <img src="images/clients/Client1.jpg" class="client-logo" alt="KUNDAN SPACES" />
+            <div class="client-label">KUNDAN SPACES</div>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <div class="client-logo-wrapper">
           <img src="images/clients/Client2.jpg" class="client-logo" alt="Client 2" />
-        </div>
-        <div class="carousel-item">
-          <img src="images/clients/Client3.jpg" class="client-logo" alt="Client 3" />
-        </div>
-        <div class="carousel-item">
-          <img src="images/clients/Client4.jpg" class="client-logo" alt="Client 4" />
-        </div>
-        <div class="carousel-item">
-          <img src="images/clients/Client5.jpg" class="client-logo" alt="Client 5" />
-        </div>
-        <div class="carousel-item">
-          <img src="images/clients/Client6.png" class="client-logo" alt="Client 6" />
+          <div class="client-label">TRIBUTE LANDMARK</div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#clientsCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#clientsCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+      <div class="carousel-item">
+        <div class="client-logo-wrapper">
+          <img src="images/clients/Client3.jpg" class="client-logo" alt="Client 3" />
+          <div class="client-label">KHADAKI EDU. SOCIETY</div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="client-logo-wrapper">
+          <img src="images/clients/Client4.jpg" class="client-logo" alt="Client 4" />
+          <div class="client-label">YASH PHOTOS</div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="client-logo-wrapper">
+          <img src="images/clients/Client5.jpg" class="client-logo" alt="Client 5" />
+          <div class="client-label">ROYAL ORANGE COUNTY</div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="client-logo-wrapper">
+          <img src="images/clients/Client6.png" class="client-logo" alt="Client 6" />
+          <div class="client-label">JANATA EDU. SOCIETY</div>
+        </div>
+      </div>
     </div>
-  </section>
+    <button class="carousel-control-prev" type="button" data-bs-target="#clientsCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#clientsCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
+
 
 
   <!-- Contact Section -->
